# multi-ai-chat-desktop

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.md  README.de.md  README.ja.md  README.md  README.zh-TW.md  SECURITY.md  agent-release.json  agent-release.schema.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
adapters/: chatgpt.json  claude-code.json  claude.json  gemini.json  grok.json  schema.json
docs/: AGENT-READY-SOURCE-RELEASE.md  AI-SISTER-THEME.md  ARCHITECTURE.md  COMPATIBILITY.md  PLAN.md  RELEASE.md  RELEASE_NOTES_v1.4.0.md  RUN-AND-UPDATE.md  (+10 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: adapter_push.toml  connections_get.toml  dev_log.toml  export_markdown.toml  open_adapter_issue.toml  open_external_url.toml  provider_close.toml  provider_eval.toml  provider_eval_with_callback.toml  provider_hide.toml  provider_new_session.toml  provider_open.toml  provider_open_login.toml  provider_open_login_external.toml  provider_reload.toml  provider_set_bounds.toml  provider_show.toml  publish_hackmd.toml  report_broken.toml  session_checkpoint_clear.toml  session_checkpoint_load.toml  session_checkpoint_save.toml  settings_get.toml  settings_set.toml  snapshot_delete.toml  snapshot_list.toml  snapshot_load.toml  snapshot_save.toml
src-tauri/src/: adapters.rs  bridge.rs  lib.rs  main.rs  session_checkpoint.rs  settings.rs  snapshots.rs  webviews.rs
(+218 files in other folders)
